[package]
authors = ["Y. T. Chung <zonyitoo@gmail.com>"]
name = "mqtt-protocol"
version = "0.11.2"
license = "MIT/Apache-2.0"
description = "MQTT Protocol Library"
keywords = ["mqtt", "protocol"]
repository = "https://github.com/zonyitoo/mqtt-rs"
documentation = "https://docs.rs/mqtt-protocol"
edition = "2018"

[dependencies]
byteorder = "1.3"
log = "0.4"
regex = "1.3"
lazy_static = "1.4"
tokio = { version = "1.0", optional = true }
tokio-util = { version = "0.6", features = ["codec"], optional = true }
bytes = { version = "1.0", optional = true }
thiserror = "1.0"

[dev-dependencies]
clap = "2"
env_logger = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "net", "time", "io-util"] }
futures = { version = "0.3" }
uuid = { version = "0.8", features = ["v4"] }

[features]
tokio-codec = ["tokio", "tokio-util", "bytes"]
default = []

[lib]
name = "mqtt"

[[example]]
name = "sub-client-async"
required-features = ["tokio"]
